--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -46,10 +46,15 @@
     );
     display: inline-block;
     padding: 0 10px;
+    border-radius: 10px;
 
     &:hover {
       background-color: #f0f0f0;
       border-radius: 10px;
+    }
+
+    &.active {
+      background-color: lightblue;
     }
   }
   .district-name {
@@ -57,13 +62,16 @@
       $size: clamp(1rem, 2vw, 1.5rem),
       $line-height: 0.5,
       $color: rgb(70, 70, 70)
-    );
-    display: inline-block;
-    padding: 0 10px;
-
-    &:hover {
-      background-color: #f0f0f0;
+      );
+      display: inline-block;
+      padding: 0 10px;
       border-radius: 10px;
-    }
+      
+      &:hover {
+        background-color: #f0f0f0;
+      }
+      &.active {
+        background-color: lightblue;
+      }
   }
 }
